Nu med live musik og pænere UI

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <button data-time="3600" class="timer__button">1 time</button>
                 <form name="customForm" class="myForm" id="custom">
                     <input type="text" name="minutes" placeholder="Indtast antal minutter">
+                    <p class="myForm__text">(Tryk enter efter indtastning af antal minutter)</p>
                 </form>
             </div>
             <div class="display">
@@ -25,6 +26,11 @@
                 <p class="display__end-time"></p>
             </div>
         </div>
+        <section class="musik">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/60UGcXAW0qM" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
     </div>
     <script src="scripts/scripts-START.js"></script>
 </body>
